# status-rule-engine

./: CLAUDE.md  README.md
docs/: demo.html  index.html  prompt.md  statuses.md
go/: bench_test.go  engine.go  engine_internal.go  engine_test.go  go.mod  types.go
go/status/: status.go
java/: pom.xml
java/src/main/java/io/logistics/statusrules/: Engine.java  ErrorCode.java  Flow.java  MetricsSnapshot.java  SourceSystem.java  Status.java  TransitionContext.java  ValidationResult.java
java/src/test/java/io/logistics/statusrules/: EngineTest.java
node/: package-lock.json  package.json
node/src/: engine.js  index.js  status.js
node/test/: engine.test.js
python/: pyproject.toml
python/logistics_status_rules.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/statusrules/: __init__.py  engine.py  status.py  types.py
python/tests/: test_engine.py
spec/: rules.yaml
