[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logistics-status-rules"
version = "1.0.0"
description = "Shipment status transition rule engine for logistics platforms"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6"]
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-benchmark"]

[tool.setuptools.packages.find]
where = ["."]
include = ["statusrules*"]
